<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HalamanRefund">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_chat"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/chat"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/notification"
        android:layout_margin="10dp"
        android:layout_toLeftOf="@+id/img_chat"
        />

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_chevron_left_"
        android:layout_margin="10dp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cirImg_logo_myprofile"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:src="@drawable/logojadi"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        app:civ_border_color="@android:color/widget_edittext_dark"
        />

        <RelativeLayout
            android:id="@+id/Relative_layout_refund"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@id/cirImg_logo_myprofile"
            android:background="@drawable/bg_profile3"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            >

            <ImageView
                android:id="@+id/cirImg_photo_refund"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_margin="15dp"
                android:src="@drawable/ic_account_circle_white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ubah"
                android:textColor="@color/putih"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_below="@id/cirImg_photo_refund"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="-10dp"
                />

            <TextView
                android:id="@+id/txt_email_refund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textColor="@color/putih"
                android:textStyle="bold"
                android:layout_toRightOf="@id/cirImg_photo_refund"
                android:layout_centerInParent="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_email"
                android:textColor="@color/putih"
                android:layout_below="@id/txt_email_refund"
                android:layout_marginLeft="120dp"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_atas_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atasnama"
            android:textColor="@color/hitam"
            android:textStyle="bold"
            android:layout_below="@+id/Relative_layout_refund"
            android:layout_marginHorizontal="20dp"
            android:layout_margin="31dp"
            />

        <EditText
            android:id="@+id/ET_jumlahtransfer"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:textColor="@color/hitam"
            android:layout_toRightOf="@+id/txt_atas_nama"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="389dp"
            android:hint="Nama Anda"
            android:textColorHint="@color/abu"

            />
        <TextView
            android:id="@+id/txt_jumlah_transfer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer"
            android:textColor="@color/hitam"
            android:textStyle="bold"
            android:layout_below="@+id/txt_atas_nama"
            android:layout_marginHorizontal="30dp"
            />

        <EditText
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:textColor="@color/hitam"
            android:layout_toRightOf="@+id/txt_jumlah_transfer2"
            android:layout_marginTop="440dp"
          />

        <TextView
            android:id="@+id/txt_date_refund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date / TIme"
            android:textColor="@color/hitam"
            android:textStyle="bold"
            android:layout_below="@+id/txt_jumlah_transfer2"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/ET_date"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:textColor="@color/hitam"
            android:layout_toRightOf="@+id/txt_date_refund"
            android:layout_marginTop="480dp"
            android:layout_marginLeft="30sp"
            />

        <TextView
            android:id="@+id/txt_payemnt_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tanggal"
            android:textColor="@color/hitam"
            android:textStyle="bold"
            android:layout_below="@+id/ET_date"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/ET_payment"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:textColor="@color/hitam"
            android:layout_toRightOf="@+id/txt_payemnt_method"
            android:layout_marginTop="520dp"
            android:layout_marginLeft="55sp"
            />



        <TextView
            android:id="@+id/txt_attach_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file"
            android:textColor="@color/hitam"
            android:textStyle="bold"
            android:layout_below="@+id/txt_payemnt_method"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/btn_choose_file"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@+id/ET_payment"
            android:layout_marginLeft="169dp"
            android:layout_marginTop="8dp"
            android:text="Choose File"
            android:textAllCaps="false" />

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="Send"
            android:textAllCaps="false"
            android:layout_below="@id/btn_choose_file"
            android:layout_marginVertical="20dp"
            android:layout_marginLeft="170dp"
            />











    </RelativeLayout>


</ScrollView>